force-app/main/default/objects/Inventory_Location__c/Inventory_Location__c.object-meta.xml
<CustomObject>
    <label>Inventory Location</label>
    <nameField>
        <label>Inventory Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>