force-app/main/default/objects/Inventory_Location__c/fields/Auto_Hold__c.field-meta.xml
<CustomField>
    <fullName>Auto_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Hold</label>
    <type>Checkbox</type>
</CustomField>