force-app/main/default/objects/Inventory_Location__c/fields/Available_for_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Available_for_Allocation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available for Allocation?</label>
    <type>Checkbox</type>
</CustomField>