force-app/main/default/objects/Inventory_Location__c/fields/Available_for_Lab_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Available_for_Lab_Allocation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to allocate inventory for Lab Orders</description>
    <inlineHelpText>Flag to allocate inventory Only for Lab Orders</inlineHelpText>
    <label>Available for Lab Allocation?</label>
    <type>Checkbox</type>
</CustomField>