force-app/main/default/objects/Inventory_Location__c/fields/Cubic_Volume_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Cubic_Volume_Utilization__c</fullName>
    <inlineHelpText>Express in Cubic Inches</inlineHelpText>
    <label>Cubic Volume Utilization</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>