force-app/main/default/objects/Inventory_Location__c/fields/Default_for_Site__c.field-meta.xml
<CustomField>
    <fullName>Default_for_Site__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default for Site</label>
    <type>Checkbox</type>
</CustomField>