force-app/main/default/objects/Inventory_Location__c/fields/Include_Auto_Merge_IP__c.field-meta.xml
<CustomField>
    <fullName>Include_Auto_Merge_IP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Auto Merge IP</label>
    <type>Checkbox</type>
</CustomField>