force-app/main/default/objects/Inventory_Location__c/fields/Include_in_Heat_Map__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Heat_Map__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include in Heat Map?</label>
    <type>Checkbox</type>
</CustomField>