force-app/main/default/objects/Inventory_Location__c/fields/Include_in_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Inventory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Inventory location available to use.</description>
    <label>Include in Inventory?</label>
    <type>Checkbox</type>
</CustomField>