force-app/main/default/objects/Inventory_Location__c/fields/Include_in_Inventory_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Inventory_Transfer__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Flag to track and enable in Product -&gt; Available Inventory -&gt; Inventory Transfer screen</description>
    <inlineHelpText>Flag to track and enable in Product -&gt; Available Inventory -&gt; Inventory Transfer screen</inlineHelpText>
    <label>Include in Inventory Transfer</label>
    <type>Checkbox</type>
</CustomField>