force-app/main/default/objects/Inventory_Location__c/fields/Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Site_Name__c</fullName>
    <label>Site Name</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Inventory Locations</relationshipLabel>
    <relationshipName>Inventory_Locations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>