force-app/main/default/objects/Inventory_Location__c/fields/Utilization_Cubic_Feet__c.field-meta.xml
<CustomField>
    <fullName>Utilization_Cubic_Feet__c</fullName>
    <formula>Cubic_Volume_Utilization__c / 1728</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Utilization Cubic Feet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>