force-app/main/default/objects/Inventory_Location__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Default_for_Site__c</columns>
    <columns>Site_Name__c</columns>
    <columns>Available_for_Allocation__c</columns>
    <columns>Include_in_Inventory__c</columns>
    <columns>Include_in_Inventory_Transfer__c</columns>
    <columns>Available_for_Lab_Allocation__c</columns>
    <columns>Include_Auto_Merge_IP__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>